# governance

./: .env.example  .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: commit-msg
.github/scripts/: validate-contributor.sh  validate-team.sh
.github/workflows/: validate-pr.yml  validate.yml  visualize.yml
contributors/: Adrastopoulos.toml  Asher-W.toml  JeffreyYijiWang.toml  Yuxiang-Huang.toml  ap-1.toml  axgu.toml  ellylai.toml  kath45823.toml  laasyaaki.toml  luke992.toml  romycyy.toml  shstevelee.toml  tsurbs.toml
docs/: contributors.md  repos.md  teams.md
meta/schemas/: contributor.schema.json  repo.schema.json  team.schema.json
meta/validators/commit/: Cargo.toml
meta/validators/commit/src/: main.rs
meta/validators/governance/: Cargo.toml
meta/validators/governance/src/: checks.rs  loader.rs  main.rs  model.rs
meta/visualizer/: Cargo.toml
meta/visualizer/src/: graph.rs  main.rs
meta/visualizer/templates/: index.html
repos/: akita.toml  cmueats.toml  cmumaps-data.toml  cmumaps.toml  governance.toml  mastiff.toml  o-quest.toml  otterhound.toml  shepherd.toml  terrier-frontend.toml  terrier.toml
teams/: cmumaps.toml  devops.toml  o-quest.toml  terrier.toml
