[package]
name = "visualizer"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
askama = { version = "0.14.0", features = ["serde_json"] }
glob = "0.3.2"
governance = { path = "../validators/governance" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
