[package]
name = "governance"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.2"
log = "0.4.27"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
